<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

        <TextView
            android:id="@+id/text_recuperar_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Recuperar contraseña"
            android:textColor="@color/blue_500"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/text_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="50dp"
            android:text="@string/text_usuario"
            android:textColor="@color/blue_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_usernameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/text_ingresa_t_usuario"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/text_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/text_e_mail"
            android:textColor="@color/blue_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_ingresa_su_e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/text_ingresa_su_e_mail"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/bt_Recuperar"
            android:layout_width="176dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:background="@drawable/botones"
            android:shadowColor="@color/black"
            android:text="@string/text_recuperar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>